added recent changes

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <!-- navbar will go here -->
     <nav>
         <div class="logo-container">
-            <img class="logo" src="./images/sp_logo.png" alt="sp_logo">
+            <img class="logo" src="./images/sp_logo.png" alt="sp_logo" loading="eager">
         </div>
         <ul class="nav-list">
-            <li id="home-btn"><a href="#home">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Skills</a></li>
-            <li><a href="">Projects</a></li>
-            <li><a href="">Experience</a></li>
-            <li><a href="">Testimonials</a></li>
-            <li><a href="">Contact</a></li>
+            <li id="home-btn"><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#contact">Contact</a></li>
             <li id="sep-line"></li>
             <li>
                 <i class="fa-regular fa-sun" id="enable-light-mode-icon"></i>
@@ -34,16 +34,16 @@
         </ul>
     </nav>
     <!-- main content will go here -->
-    <main>
+    <main id="home">
         <div class="flex-container home-content-container">
             <div id="intro-container">
-                <h1>Hey, I am Shubham</h1>
+                <h1>Hey, I am Shubham 👋</h1>
                 <article>
                     <p>
-                        I'm a Full Stack Developer (PHP backend) with a focus on creating and designing exceptional digital experiences that are fast, accessible, visually appealing, responsive, and feature-rich. I have been into programming for over 3 years, and counting ♾️.
+                        I'm a <strong>Full Stack Developer</strong> (PHP backend) with a focus on creating and designing exceptional digital experiences that are fast, accessible, visually appealing, responsive, and feature-rich. I have been into programming for over <strong>3 years</strong>, and counting ♾️.
                     </p>
                     <p>
-                        I'm a Highly motivated and results-oriented computer science engineering graduate with a passion for building innovative software solutions.  I possess strong skills in  various programming languages including Java, Python, C, C++, HTML, CSS, JavaScript, MySQL and PHP. I love making projects, and solving problems, programming is ❤️.
+                        I'm a Highly motivated and results-oriented computer science engineering graduate with a passion for building innovative software solutions.  I possess strong skills in  various programming languages including <strong>Java</strong>, <strong>Python</strong>, <strong>C</strong>, <strong>C++</strong>, <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, <strong>MySQL</strong> and <strong>PHP</strong>. I love making projects, and solving problems, programming is ❤️.
                     </p>
                 </article>
             </div>
@@ -59,45 +59,270 @@
                 </div>
             </div>
             <div id="socials-container">
-                <a href="">
+                <a href="https://www.linkedin.com/in/shubhammpaliwal/">
                     <!-- <i class="fa-brands fa-linkedin"></i> -->
                      <i class="fa-brands fa-linkedin-in"></i>
                 </a>
-                <a href="">
+                <a href="https://github.com/ShubhamPaliwal03">
                     <i class="fa-brands fa-github"></i>
                 </a>
-                <a href="">
+                <a href=https://x.com/shubhammpaliwal">
                     <i class="fa-brands fa-x-twitter"></i>
                 </a>
             </div>
         </div>
         <div class="flex-container my-pic-container">
-            <img id="my-image" src="./images/my_picture.jpg" alt="my_picture">
+            <img id="my-pic" src="./images/my_picture.jpg" alt="my_picture">
         </div>
     </main>
     <!-- about will go here -->
-    <section>
-        
+    <section id="about">
+        <h2>
+            <span class="section-heading">
+                About Me
+            </span>
+        </h2>
+        <div class="flex-container">
+            <div class="row-flex-container">
+                <div id="pic-container">
+                    <img id="my-pic" src="./images/my_picture_4.jpg" alt="my_picture" loading="lazy">
+                </div>
+                <div id="description-container">
+                    <h3>Wanna know about me? Here's the gist:</h3>
+                    <article id="about-content">
+                        <p>
+                            I'm a passionate, workaholic Full Stack Developer, who is well versed with Web Development technologies like <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong>, <strong>PHP</strong>, <strong>MySQL</strong>, and Programming Languages like <strong>Java</strong> (Core, with frameworks like <strong>Swing</strong>, utilities like <strong>JDBC</strong>), <strong>Python</strong>, <strong>C++</strong> and <strong>C</strong>, and tools like <strong>Git</strong>, <strong>Github</strong>, <strong>Linux</strong>, with a knack of problem solving using <strong>Data Structures and Algorithms</strong>.
+                        </p>
+                        <p>
+                            I am enthusiastic about bringing the technical and visual aspects of digital products to life. What matters to me is user experience, pixel perfect design, creating feature loaded user-centered applications, and writing clear, readable, high performant code.
+                            I began my programming journey in early 2021, and since then I've continued to grow and evolve as a developer, taking on new challenges and learning the latest technologies along the way
+                        </p>
+                        <p>  
+                            I am currently doing open-source contributions in web related projects, along with creating some exciting projects along with learning frameworks like <strong>BootStrap</strong>, <strong>JQuery</strong>, and <strong>AJAX</strong>, and also learning latest technologies like <strong>React JS</strong>, <strong>Node JS</strong>, <strong>Express JS</strong> and <strong>Mongo DB</strong>, and <strong>Java Backend Technologies</strong> like <strong>JSP Servlet</strong>, <strong>Spring</strong>, <strong>SpringBoot</strong> and <strong>Hibernate</strong> for creating scalable, efficient, and reliable products.
+                        </p>
+                        <p>
+                            I am a quick learner, progressive thinker and I am always eager to learn new technologies, I enjoy working on products end to end, from ideation all the way to development.
+                            I love problem solving a lot, it gives me an another level of kick,you can have a look at my coding profiles at the end of this page if you like to.
+                        </p>
+                        <p>
+                            When I am not in full-on professional developer mode, you will always find me experimenting with new things, learning new technologies, creating some exciting projects, and solving some exciting DSA problems, I also love reading articles related to recent developments in tech, excercising, and exploring nature.
+                        </p>
+                        <p>
+                            Finally, some quick bits about me :-
+                        </p>
+                        <ul>
+                            <li class="show-list-style"><em>Final Year B.Tech. Computer Science Student</em></li>
+                            <li class="show-list-style"><em>Aspiring Software Developer</em></li>
+                            <li class="show-list-style"><em>Avid learner</em></li>
+                        </ul>
+                        <p>One last thing, feel free to reach out to me on my socials if you ever like to, I promise I don't bite! 😁</p>
+                    </article>
+                </div>
+            </div>
+        </div>
     </section>
     <!-- skills will go here -->
-    <section>
-
-    </section>
-    <!-- projects -->
-    <section>
-
+    <section id="skills">
+        <h2>
+            <span class="section-heading">
+                Skills
+            </span>
+        </h2>
+        <h3>The Skills and Technologies I am really good at:</h3>
+        <div class="grid-container">
+            <div class="column-flex-container">
+                <img class="skills-img" src="./images/skills_icons/HTML.svg" alt="">
+                <div>HTML</div>
+            </div>
+            <div class="column-flex-container">
+                <img class="skills-img" src="./images/skills_icons/CSS.svg" alt="">
+                <div>CSS</div>
+            </div>
+            <div class="column-flex-container">
+                <img class="skills-img" src="./images/skills_icons/javascript.svg" alt="">
+                <div>JavaScript</div>
+            </div>
+            <div class="column-flex-container">
+                <img class="skills-img" src="./images/skills_icons/PHP.svg" alt="">
+                <div>PHP</div>
+            </div>
+            <div class="column-flex-container">
+                <img class="skills-img" src="./images/skills_icons/MySQL.svg" alt="">
+                <div>MySQL</div>
+            </div>
+            <div class="column-flex-container">
+                <img class="skills-img" src="./images/skills_icons/Java.svg" alt="">
+                <div>Java</div>
+            </div>
+            <div class="column-flex-container">
+                <img class="skills-img" src="./images/skills_icons/Python.svg" alt="">
+                <div>Python</div>
+            </div>
+            <div class="column-flex-container">
+                <img class="skills-img" src="./images/skills_icons/DSA.png" alt="">
+                <div>DSA</div>
+            </div>
+            <div class="column-flex-container">
+                <img class="skills-img" src="./images/skills_icons/git.svg" alt="">
+                <div>Git</div>
+            </div>
+            <div class="column-flex-container">
+                <img class="skills-img" src="./images/skills_icons/C++.svg" alt="">
+                <div>C++</div>
+            </div>
+            <div class="column-flex-container">
+                <img class="skills-img" src="./images/skills_icons/C.svg" alt="">
+                <div>C</div>
+            </div>
+            <div class="column-flex-container">
+                <img class="skills-img" src="./images/skills_icons/Linux.svg" alt="">
+                <div>Linux</div>
+            </div>
+        </div>
     </section>
     <!-- experience -->
-    <section>
-
+    <section id="experience">
+        <h2>
+            <span class="section-heading">
+                Experience
+            </span>
+        </h2>
+        <h3>Here's are quick summary of my experiences:</h3>
+        <div class="experience-container row-flex-container">
+            <img class="company-logo" src="./images/GSSOC_logo.svg" alt="GSSOC_logo">
+            <div class="experience-details">
+                <h4>Open Source Contributor</h4>
+                <ul>
+                    <li class="show-list-style">Contributed to various projects listed under GSSOC at GitHub, created and implemented multiple complex and responsive design web pages from scratch with complete features (Frontend), which got accepted and integrated with the websites seamlessly, without the need of any revisions.</li>
+                    <li class="show-list-style">Got one level 3, two level 1 pull requests merged, placed in top 500 of the leaderboard, among 17k participants.</li>
+                    <li class="show-list-style">Resolved issues in repositories with a success rate of 100%, and a merge rate of 100%.</li>
+                </ul>
+            </div>
+            <p class="experience-timeline">May 2024 - Present</p>
+        </div>
+    </section>
+    <!-- projects -->
+    <section id="projects">
+        <h2>
+            <span class="section-heading">
+                Projects
+            </span>
+        </h2>
+        <h3>Some of the Noteworthy Projects that I have built:</h3>
+        <div class="projects-container row-flex-container">
+            <div class="project-preview-container">
+                <img class="project-preview-image" src="./images/preview-quora_clone.png" alt="">
+            </div>
+            <div class="project-details-container">
+                <h3>Quora Clone</h3>
+                <p>
+                    <ul>
+                        <li class="show-list-style">
+                            <strong>Full-featured Q&A platform:</strong>
+                            A Quora clone with functionalities like login, registration, question posting, editing, and deletion, with a visually appealing and user-friendly interface.
+                        </li>
+                        <li class="show-list-style">
+                            <strong>Real-time interaction:</strong>
+                            Implemented AJAX for seamless data retrieval using asyncronous data communication, eliminating page reloads for a smooth user experience.
+                        </li>
+                        <li class="show-list-style">
+                            <strong>Upvoting, downvoting, and commenting:</strong>
+                            Users can engage with content through likes, dislikes, and comments, fostering discussions.
+                        </li>
+                        <li class="show-list-style">
+                            <strong>User management:</strong>
+                            Includes follow/unfollow functionality, user dashboards with follower/following details, and profile customization options.
+                        </li>
+                    </ul>
+                </p>
+                <div class="project-tech-stack-container">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
+                    <span>PHP</span>
+                    <span>MySQL</span>
+                    <span>JQuery</span>
+                    <span>AJAX</span>
+                </div>
+                <a class="external-link" href="https://www.my-quora-clone.000.pe/">
+                    <img class="external-link-image" src="./images/external-link-icon.svg" alt="external-link-image">
+                </a>
+            </div>
+        </div>
+        <div class="projects-container row-flex-container">
+            <div class="project-preview-container">
+                <img class="project-preview-image" src="./images/preview-justnote.png" alt="">
+            </div>
+            <div class="project-details-container">
+                <h3>JustNote - Notepad Application</h3>
+                <p>
+                    <ul>
+                        <li class="show-list-style">
+                            <strong>Rich-featured notepad:</strong>
+                            Developed a notepad application in Java with functionalities like open, save, edit, find & replace, and text formatting.
+                        </li>
+                        <li class="show-list-style">
+                            <strong>Seamless user experience: </strong>
+                            Implemented undo/redo, scrolling, zooming, and a "prompt to save" feature for effortless text editing and data protection.
+                        </li>
+                        <li class="show-list-style">
+                            <strong>Performance optimization:</strong>
+                            Utilized multi-threading for faster font loading, significantly improving responsiveness.
+                        </li>
+                        <li class="show-list-style">
+                            <strong>Customization options:</strong>
+                            Provided various text formatting options like font family, style, size, color, and light/dark mode for a personalized experience.
+                        </li>
+                    </ul>
+                </p>
+                <div class="project-tech-stack-container">
+                    <span>Java</span>
+                    <span>Swing Framework</span>
+                </div>
+                <a class="external-link" href="https://github.com/ShubhamPaliwal03/JustNote">
+                    <img class="external-link-image" src="./images/external-link-icon.svg" alt="external-link-image">
+                </a>
+            </div>
+        </div>
     </section>
     <!-- testimonials -->
-    <section>
-
+    <section id="testimonials">
+        <h2>
+            <span class="section-heading">
+                Testimonials
+            </span>
+        </h2>
+        <h3>Nice things people have said about me :-</h3>
+        <div class="testimonial-container column-flex-container">
+            <img class="testimonial-giver-image" src="./images/testimonial_1_profile_pic.jpg" alt="testimonial-giver-image">
+            <div class="testimonial-content">
+                <p>
+                    "I am pleased to recommend Shubham, who has been an exemplary student in my programming courses. He consistently demonstrates a strong commitment to learning, punctuality, and a remarkable work ethic. Shubham is eager to grasp new concepts and approaches problem-solving with great enthusiasm and excitement.
+                </p>
+                <p>
+                    Throughout our time together, Shubham has shown proficiency in multiple programming languages and has consistently exceeded expectations in understanding and applying complex concepts. His dedication to continuous learning and improvement is truly commendable.
+                </p>
+                <p>
+                    I have complete confidence that Shubham will excel in all his future endeavours. His dedication and passion for learning ensure that he will achieve great success. I am certain that Shubham's exceptional abilities and hard work will lead him to remarkable accomplishments. He would be a valuable asset to any team or organization."
+                </p> 
+            </div>
+            <h4>
+                <span class="testimonial-giver-name">Tarun Verma</span>
+                <a href="https://www.linkedin.com/in/tarrunverrma">
+                    <img class="external-link-image" src="./images/external-link-icon.svg" alt="external-link-image">
+                </a>
+            </h4>
+            <div>Founder - C Institute</div>
+            <div>Co-Founder - Pitsol.in</div>
+        </div>
     </section>
     <!-- contact -->
     <section>
-
+        <h2>
+            <span class="section-heading">
+                Contact
+            </span>
+        </h2>
     </section>
     <script src="https://kit.fontawesome.com/4ca0345904.js" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
