--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- navbar will go here -->
     <nav>
         <div class="logo-container">
-            <img class="logo" src="./images/sp_logo.png" alt="sp_logo" loading="eager">
+            <img class="logo" src="./images/sp_logo.png" alt="sp_logo">
         </div>
         <ul class="nav-list">
             <li id="home-btn"><a href="#">Home</a></li>
@@ -25,9 +25,9 @@
             <li><a href="#testimonials">Testimonials</a></li>
             <li><a href="#contact">Contact</a></li>
             <li id="sep-line"></li>
-            <li>
+            <!-- <li>
                 <i class="fa-regular fa-sun" id="enable-light-mode-icon"></i>
-            </li>
+            </li> -->
             <li id="download-cv">
                 <a href="./resources/resume_shubham_paliwal.pdf" download >Download CV</a>
             </li>
@@ -85,7 +85,7 @@
         <div class="flex-container">
             <div class="row-flex-container">
                 <div id="pic-container">
-                    <img id="my-pic" src="./images/my_picture_4.jpg" alt="my_picture" loading="lazy">
+                    <img id="my-pic" src="./images/my_picture_4.jpg" alt="my_picture">
                 </div>
                 <div id="description-container">
                     <h3>Wanna know about me? Here's the gist:</h3>
@@ -130,51 +130,51 @@
         </h2>
         <h3>The Skills and Technologies I am really good at:</h3>
         <div class="grid-container">
-            <div class="column-flex-container">
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/HTML.svg" alt="">
                 <div>HTML</div>
             </div>
-            <div class="column-flex-container">
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/CSS.svg" alt="">
                 <div>CSS</div>
             </div>
-            <div class="column-flex-container">
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/javascript.svg" alt="">
                 <div>JavaScript</div>
             </div>
-            <div class="column-flex-container">
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/PHP.svg" alt="">
                 <div>PHP</div>
             </div>
-            <div class="column-flex-container">
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/MySQL.svg" alt="">
                 <div>MySQL</div>
             </div>
-            <div class="column-flex-container">
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/Java.svg" alt="">
                 <div>Java</div>
             </div>
-            <div class="column-flex-container">
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/Python.svg" alt="">
                 <div>Python</div>
             </div>
-            <div class="column-flex-container">
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/DSA.png" alt="">
                 <div>DSA</div>
             </div>
-            <div class="column-flex-container">
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/git.svg" alt="">
                 <div>Git</div>
             </div>
-            <div class="column-flex-container">
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/C++.svg" alt="">
                 <div>C++</div>
             </div>
-            <div class="column-flex-container">
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/C.svg" alt="">
                 <div>C</div>
             </div>
-            <div class="column-flex-container">
+            <div class="column-flex-container flex-center">
                 <img class="skills-img" src="./images/skills_icons/Linux.svg" alt="">
                 <div>Linux</div>
             </div>
@@ -211,7 +211,7 @@
         <h3>Some of the Noteworthy Projects that I have built:</h3>
         <div class="projects-container row-flex-container">
             <div class="project-preview-container">
-                <img class="project-preview-image" src="./images/preview-quora_clone.png" alt="">
+                <img class="project-preview-image" src="./images/preview-quora_clone.png" alt="preview-quora_clone">
             </div>
             <div class="project-details-container">
                 <h3>Quora Clone</h3>
@@ -219,7 +219,7 @@
                     <ul>
                         <li class="show-list-style">
                             <strong>Full-featured Q&A platform:</strong>
-                            A Quora clone with functionalities like login, registration, question posting, editing, and deletion, with a visually appealing and user-friendly interface.
+                            Built a Quora clone with functionalities like login, registration, question posting, editing, and deletion, with a visually appealing and user-friendly interface.
                         </li>
                         <li class="show-list-style">
                             <strong>Real-time interaction:</strong>
@@ -251,7 +251,7 @@
         </div>
         <div class="projects-container row-flex-container">
             <div class="project-preview-container">
-                <img class="project-preview-image" src="./images/preview-justnote.png" alt="">
+                <img class="project-preview-image" src="./images/preview-justnote.png" alt="preview-justnote">
             </div>
             <div class="project-details-container">
                 <h3>JustNote - Notepad Application</h3>
@@ -284,6 +284,70 @@
                 </a>
             </div>
         </div>
+        <div class="projects-container row-flex-container">
+            <div class="project-preview-container">
+                <img class="project-preview-image" src="./images/preview-snaky_climb.png" alt="preview-snaky_climb">
+            </div>
+            <div class="project-details-container">
+                <h3>Snaky Climb</h3>
+                <p>
+                    <ul>
+                        <li class="show-list-style">
+                            <strong>Interactive Snakes and Ladders:</strong>
+                            Built a visually stunning and engaging Snakes and Ladders game with attractive animations and sound effects.
+                        </li>
+                        <li class="show-list-style">
+                            <strong>Enhanced Gameplay:</strong>
+                            Leveraged random number generation for dice rolls and optimized access time in code logic using hash maps, leading to a smoother and more enjoyable experience for players.
+                        </li>
+                        <li class="show-list-style">
+                            <strong>Enhanced User Experience with Asynchronous Animations:</strong>
+                            Leveraged asynchronous JavaScript and DOM manipulation for smooth jump animations, creating an engaging and responsive gaming experience.
+                        </li>
+                    </ul>
+                </p>
+                <div class="project-tech-stack-container">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
+                </div>
+                <a class="external-link" href="https://snake-and-ladders-game.netlify.app/">
+                    <img class="external-link-image" src="./images/external-link-icon.svg" alt="external-link-image">
+                </a>
+            </div>
+        </div>    
+        <div class="projects-container row-flex-container">
+            <div class="project-preview-container">
+                <img class="project-preview-image" src="./images/preview-tic_tac_toe.png" alt="preview-tic_tac_toe">
+            </div>
+            <div class="project-details-container">
+                <h3>Tic Tac Toe</h3>
+                <p>
+                    <ul>
+                        <li class="show-list-style">
+                            <strong>Visually Stunning Tic Tac Toe:</strong>
+                            Built a Tic Tac Toe game with a beautiful UI featuring elegant colors, a balanced layout, and seamless animations.
+                        </li>
+                        <li class="show-list-style">
+                            <strong>Engaging Gameplay:</strong>
+                            Integrated informative displays for turn indicators, scores, and winners, along with captivating sounds and celebratory confetti effects.
+                        </li>
+                        <li class="show-list-style">
+                            <strong>Responsive Design:</strong>
+                            Ensured a flawless experience across all devices, from phones to large screens.
+                        </li>
+                    </ul>
+                </p>
+                <div class="project-tech-stack-container">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>JavaScript</span>
+                </div>
+                <a class="external-link" href="https://tic-tac-toe-io-game.netlify.app/">
+                    <img class="external-link-image" src="./images/external-link-icon.svg" alt="external-link-image">
+                </a>
+            </div>
+        </div>
     </section>
     <!-- testimonials -->
     <section id="testimonials">
@@ -292,8 +356,8 @@
                 Testimonials
             </span>
         </h2>
-        <h3>Nice things people have said about me :-</h3>
-        <div class="testimonial-container column-flex-container">
+        <h3>Nice things people have said about me:</h3>
+        <div class="testimonial-container column-flex-container flex-center">
             <img class="testimonial-giver-image" src="./images/testimonial_1_profile_pic.jpg" alt="testimonial-giver-image">
             <div class="testimonial-content">
                 <p>
@@ -317,13 +381,44 @@
         </div>
     </section>
     <!-- contact -->
-    <section>
+    <section id="contact">
         <h2>
             <span class="section-heading">
                 Contact
             </span>
         </h2>
+        <p>Feel free to reach out to me if you for a developer, have a query, or simply want to connect.</p>
+        <div class="row-flex-container flex-center">
+            <i class="fa-regular fa-envelope"></i>
+            <h2 id="mail_id">shubhampaliwal.dev@gmail.com</h2>
+            <i class="fa-regular fa-copy copy-btn" onclick="copyMailId()"></i>
+        </div>
+        <p>You may also find me on these coding platforms:</p>
+        <div class="row-flex-container flex-center">
+            <a href="https://leetcode.com/shubham_paliwal/">
+                <img class="social-handles-icons" src="./images/social_handles_icons/LeetCode_logo_white_no_text.svg" alt="">
+            </a>
+            <a href="https://auth.geeksforgeeks.org/user/shubham_paliwal/?utm_source=geeksforgeeks&utm_medium=my_profile&utm_campaign=auth_user">
+                <img class="social-handles-icons" src="./images/social_handles_icons/GeeksforGeeks.svg" alt="">
+            </a>
+            <a href="https://codeforces.com/profile/Shubham_Paliwal">
+                <img class="social-handles-icons" src="./images/social_handles_icons/Codeforces.colored.svg" alt="">
+            </a>
+            <a href="https://www.codingninjas.com/studio/profile/shubham_paliwal">
+                <img class="social-handles-icons" src="./images/social_handles_icons/coding_ninjas.png" alt="">
+            </a>
+            <a href="https://www.interviewbit.com/profile/shubham-paliwal_209/">
+                <img class="social-handles-icons circled" src="./images/social_handles_icons/interviewbit.png" alt="">
+            </a>
+            <a href="https://www.hackerrank.com/profile/shubhampaliwal34">
+                <img class="social-handles-icons circled" src="./images/social_handles_icons/HackerRank_Icon-1000px.png" alt="">
+            </a>
+        </div>
     </section>
+    <footer>
+        <div>Coded with ❤️ by Shubham Paliwal in&nbsp;&nbsp;🇮🇳</div>
+        <div>&VerticalSeparator; &copy; 2024</div>
+    </footer>
     <script src="https://kit.fontawesome.com/4ca0345904.js" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
 </body>
