did some minor fixes and updates

--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 Contact
             </span>
         </h2>
-        <p>Feel free to reach out to me if you for a developer, have a query, or simply want to connect.</p>
+        <p>Feel free to reach out to me if you are looking for a developer, have a query, or simply want to connect.</p>
         <div class="row-flex-container flex-center">
             <i class="fa-regular fa-envelope"></i>
             <h2 id="mail_id">shubhampaliwal.dev@gmail.com</h2>
